package(default_visibility = ["//visibility:public"])

load("@k8s_object//:defaults.bzl", "k8s_object")

k8s_object(
    name = "controller",
    images = {
        "github.com/knative/build/cmd/controller": "//cmd/controller:image",
        "github.com/knative/build/cmd/creds-init": "//cmd/creds-init:image",
        "github.com/knative/build/cmd/git-init": "//cmd/git-init:image",
    },
    template = "controller.yaml",
)

# This file is named a-namespace.yaml so that it comes first alphabetically
# when run through `kubectl apply`.
k8s_object(
    name = "namespace",
    template = "a-namespace.yaml",
)

k8s_object(
    name = "serviceaccount",
    template = "serviceaccount.yaml",
)

k8s_object(
    name = "clusterrolebinding",
    template = "clusterrolebinding.yaml",
)

k8s_object(
    name = "build",
    template = "build.yaml",
)

k8s_object(
    name = "buildtemplate",
    template = "buildtemplate.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "authz",
    objects = [
        ":serviceaccount",
        ":clusterrolebinding",
    ],
)

k8s_objects(
    name = "everything",
    objects = [
        ":namespace",
        ":authz",
        ":build",
        ":buildtemplate",
        ":controller",
    ],
)
